Fixed styling on tablet

--- a/css/index.css
+++ b/css/index.css
@@ -154,20 +154,24 @@ h1, h2, h3, h4, h5 {
 	display:flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	padding: 0px 0px 40px 0px;
 }
 
-.spv, .header {
+.header {
 	border-bottom: 1px solid black;
+}
+
+.contact-container {
+    border-top: 1px solid black;
+    padding-top: 40px;
 }
 
 .contact {
 	width: 140px;
-	margin-bottom: 70px;
+    margin-bottom: 70px;
 }
 
 .contact p {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 
@@ -312,8 +316,17 @@ h1, h2, h3, h4, h5 {
     }
 
     .container-margin  {
-        margin-left: 2%;
-        margin-right: 2%;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+    
+    .services, .product, .vision {
+        width: 29.5%;
+    }
+
+    .container-home .spv, .fa {
+        margin-left: 1.8%;
+        margin-right: 1.8%;
     }
 }
 
